# woxmail

./: .gitignore  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
.hermes/plans/: 2026-06-10_120000-woxmail-thunderbird-replacement.md
scripts/: publish-github.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: contacts.rs  imports.rs  lib.rs  main.rs  models.rs  oauth.rs  secret.rs  text.rs  translate.rs
src-tauri/src/app/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/mail/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs
src/api/: cache.ts  contact.ts  mail.ts  open.ts  tauri.ts
src/components/: AddAccountModal.tsx  AddImapAccountModal.tsx  ContactScreen.tsx  HtmlRenderer.tsx  MailScreen.tsx  OutboxScreen.tsx  SettingsModal.tsx  Sidebar.tsx  TitleBar.tsx  WelcomeScreen.tsx
src/hooks/: useKeyboardShortcuts.ts
src/i18n/: index.ts
src/types/: mail.ts
src/utils/: folders.ts
