[package]
name = "woxmail"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "woxmail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2.3.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
keyring = "3"
imap = { version = "2.4.1", default-features = false, features = ["tls"] }
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "native-tls"] }
mailparse = "0.14.1"
native-tls = "0.2.18"
base64 = "0.22"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
urlencoding = "2"
